# scraper

./: .env.example  .gitignore  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
k8s/: 00-namespace.yaml  10-secrets.yaml  20-configmaps.yaml  30-kafka.yaml  31-kafka-init-job.yaml  40-postgres.yaml  50-parser.yaml  60-scraper-worker.yaml  70-dedup-worker.yaml  80-hpa.yaml  README.md
module1-browser-controller/: jest.config.js  package-lock.json  package.json  tsconfig.json
module1-browser-controller/src/: browserCluster.ts  configLoader.ts  humanMimicry.ts  index.ts  logger.ts  resourceFilter.ts  semaphore.ts  stealth.ts  types.ts
module2-html-parser/: Dockerfile  pyproject.toml
module2-html-parser/src/: __init__.py  config_loader.py  css_extractor.py  heuristic_extractor.py  llm_extractor.py  logger.py  normaliser.py  parser.py  server.py  types.py
module2-html-parser/tests/: test_config_loader.py  test_css_extractor.py  test_heuristic_extractor.py  test_llm_extractor.py  test_logger.py  test_normaliser.py  test_parser.py  test_server.py  test_types.py
module3-kafka-worker/: Dockerfile  package-lock.json  package.json
module3-kafka-worker/src/: configLoader.ts  consumer.ts  index.ts  logger.ts  main.ts  metrics.ts  producer.ts  types.ts  (+1 more)
module4-dedup-pipeline/: Dockerfile  pyproject.toml
module4-dedup-pipeline/src/: __init__.py  blocker.py  classifier.py  comparator.py  config_loader.py  kafka_consumer.py  logger.py  main.py  pipeline.py  preprocessor.py  sink.py  types.py
module4-dedup-pipeline/tests/: conftest.py  helpers.py  test_blocker.py  test_classifier.py  test_comparator.py  test_config_loader.py  test_logger.py  test_pipeline.py  test_preprocessor.py  test_sink.py
module5-api-ui/: Dockerfile  package.json
scripts/: sample_producer.py
(+17 files in other folders)
